fixed Burp Suite and Snyk vulnerabilities