@@ -1,16 +1,13 @@
 package hr.algebra.toystore.service;
 
 import hr.algebra.toystore.dto.PaymentMethodDto;
-import hr.algebra.toystore.dto.ToyDto;
 import hr.algebra.toystore.repository.PaymentMethodRepository;
 import hr.algebra.toystore.util.PaymentMethodMapper;
-import hr.algebra.toystore.util.ToyMapper;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -23,7 +20,7 @@ public class PaymentMethodServiceImpl implements PaymentMethodService {
         return paymentMethodRepository.findAll()
                 .stream()
                 .map(PaymentMethodMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
